# Project-X---EcoBot

./: .travis.yml  CMakeLists.txt  README.md  package.xml
World/: cleaning_world.world  multiple_debris.world  system_test_simple_v1.world
cmake/: CodeCoverage.cmake
data/World/: cleaning_world.world  multiple_debris.world  system_test_simple_v1.world
data/urdf_package/: CMakeLists.txt
data/urdf_package/launch/: display.launch  gazebo.launch
data/urdf_package/modifiedKobuki/: kobuki.urdf.xacro  kobuki_hexagons_astra.urdf.xacro
docs/: DoxyFile
docs/html/: GreedyAlg_8hpp.html  GreedyAlg_8hpp__dep__incl.map  GreedyAlg_8hpp__dep__incl.md5  GreedyAlg_8hpp__incl.map  GreedyAlg_8hpp__incl.md5  GreedyAlg_8hpp_source.html  IPlanningAlg_8hpp.html  IPlanningAlg_8hpp__dep__incl.map  IPlanningAlg_8hpp__dep__incl.md5  IPlanningAlg_8hpp__incl.map  IPlanningAlg_8hpp__incl.md5  IPlanningAlg_8hpp_source.html  ImageAnalysis_8hpp.html  ImageAnalysis_8hpp__dep__incl.map  ImageAnalysis_8hpp__dep__incl.md5  ImageAnalysis_8hpp__incl.map  ImageAnalysis_8hpp__incl.md5  ImageAnalysis_8hpp_source.html  LowXAlg_8hpp.html  LowXAlg_8hpp__dep__incl.map  LowXAlg_8hpp__dep__incl.md5  LowXAlg_8hpp__incl.map  LowXAlg_8hpp__incl.md5  LowXAlg_8hpp_source.html  Point_8hpp.html  Point_8hpp__dep__incl.map  Point_8hpp__dep__incl.md5  Point_8hpp_source.html  StateMachine_8hpp.html  StateMachine_8hpp__incl.map  StateMachine_8hpp__incl.md5  StateMachine_8hpp_source.html  annotated.html  classGreedyAlg-members.html  classGreedyAlg.html  classGreedyAlg__coll__graph.md5  classGreedyAlg__inherit__graph.map  classIPlanningAlg-members.html  classIPlanningAlg.html  classIPlanningAlg__inherit__graph.map  (+26 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
docs/latex/: GreedyAlg_8hpp.tex  GreedyAlg_8hpp__dep__incl.md5  GreedyAlg_8hpp__incl.md5  IPlanningAlg_8hpp.tex  IPlanningAlg_8hpp__dep__incl.md5  IPlanningAlg_8hpp__incl.md5  ImageAnalysis_8hpp.tex  ImageAnalysis_8hpp__dep__incl.md5  ImageAnalysis_8hpp__incl.md5  LowXAlg_8hpp.tex  LowXAlg_8hpp__dep__incl.md5  LowXAlg_8hpp__incl.md5  Point_8hpp.tex  Point_8hpp__dep__incl.md5  StateMachine_8hpp.tex  StateMachine_8hpp__incl.md5  annotated.tex  classGreedyAlg.tex  classGreedyAlg__inherit__graph.md5  classIPlanningAlg.tex  classIPlanningAlg__inherit__graph.md5  classImageAnalysis.tex  classLowXAlg.tex  classLowXAlg__coll__graph.md5  classPoint.tex  classStateMachine.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  refman.tex
include/: DebrisCollection.hpp  GreedyAlg.hpp  IPlanningAlg.hpp  ImageAnalysis.hpp  LowXAlg.hpp  Point.hpp  StateMachine.hpp  VelocityGenerator.hpp
launch/: cleaner.launch  noAutoRun.launch  withoutKobuki.launch
results/: cppcheck.txt  cpplint.txt
src/: DebrisCollection.cpp  GreedyAlg.cpp  ImageAnalysis.cpp  LowXAlg.cpp  Point.cpp  StateMachine.cpp  VelocityGenerator.cpp  main.cpp
test/: DebrisCollectionTest.cpp  DebrisCollectionTest.launch  GreedyAlgTest.cpp  ImageAnalysisTest.cpp  LowXAlgTest.cpp  NodeTest.launch  PointTest.cpp  StateMachineTest.cpp  VelocityGeneratorTest.cpp  main.cpp  node_test.cpp
test/system_test/: system_test_simple_v1.world
urdf_package/: CMakeLists.txt  package.xml
urdf_package/launch/: display.launch  gazebo.launch
urdf_package/meshes/: turtlebot_world.STL
urdf_package/modifiedKobuki/: kobuki.urdf.xacro  kobuki_hexagons_astra.urdf.xacro
urdf_package/urdf/: Part1.urdf
