<?xml version="1.0"?>
<package format="2">
  <name>project_x_ecobot</name>
  <version>1.0.0</version>
  <description>Package for Ecobot and relevant dependencies</description>

  <maintainer email="rjb3vp@umd.edu">Ryan Bates</maintainer>
  <maintainer email="lalzogbi@terpmail.umd.edu">Lydia Zoghbi</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/lydiazoghbi/project_x_ecobot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>catkin</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>cv_bridge</test_depend>
  <test_depend>image_transport</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>tf</test_depend>

  <export>
  </export>
</package>
